fix(styles): Add missing padding-inline-end to body

--- a/public/css/home.module.css
+++ b/public/css/home.module.css
@@ -24,16 +24,18 @@ body {
 }
 
 .area-wrapper .area-quote {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
   background: linear-gradient(140.88deg, #eb5231 -29.15%, #571fcf 151.64%),
     linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
   color: white;
   flex: 1;
   padding: 33px 23px;
+  padding-block: 33px;
+  padding-inline-start: 36px;
+  padding-inline-end: 36px;
   border-radius: 10px;
-
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
 }
 .area-wrapper .area-quote .quote-header {
   font-weight: 500;
